🎨 Prevent overflow hidden on Box component

--- a/src/components/toolbox/box/box.css
+++ b/src/components/toolbox/box/box.css
@@ -14,7 +14,6 @@
   display: flex;
   flex-direction: column;
   height: auto;
-  overflow: hidden;
   position: relative;
 
   &.full {
