--- a/src/components/toolbox/table/table.css
+++ b/src/components/toolbox/table/table.css
@@ -6,7 +6,8 @@
   background-color: var(--color-white);
   display: flex;
   flex-wrap: nowrap;
-  padding: 0 0.5em; /* stylelint-disable-line */
+  padding: 0;
+  margin: 0;
   position: relative;
 
   &:not(.header) {
